# reflex

./: .gitignore  COMPREHENSIVE_TEST_RESULTS.md  DESIGN_NOTE_CONTEXT_PRESERVATION.md  FINAL_COMPLETE_SUMMARY.md  PHASE5_VALIDATION_COMPLETE.md  PHASE6_RETRIEVAL_COMPLETE.md  README.md  SETUP.md  TODO.md  UNIT_TEST_EXPLANATION.md  comprehensive_test.py  config_tuning_demo.py  debug_costs.py  debug_traces.py  demo_phase6.py  demo_unit_test_generation.py  generate_test_traces.py  generate_validation_patterns.py  pattern_test.py  pyproject.toml  requirements.txt  simple_comprehensive_test.py  skill_compilation_loop_paper.md  skill_graph_prompt_for_ai.md  skill_graph_proposal.md  test_compilation.py  test_traces.py  validation_test.py
asc/: __init__.py  cli.py  config.py
asc/compilation/: __init__.py  compiler.py  strategies.py
asc/context/: __init__.py
asc/core/: __init__.py  agent.py  models.py
asc/mining/: __init__.py  clean_mining.py
asc/retrieval/: __init__.py
asc/storage/: __init__.py  traces.py
asc/tools/: __init__.py  registry.py
asc/validation/: __init__.py
compiled_skills/: azure_deploy_context_aware.py  math_random_workflow.py  text_processing_workflow.py
config/: default.json  test.json
test_skills/: broken_skill.py  math_calculate_random.py  string_transform_file_write.py
test_validation/: test_skill.py
validation_reports/: validation_report_20250805_165008.html  validation_report_20250805_165555.html  validation_report_20250805_171835.html
